--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h1 class="hero-title reset">
     Эффективные решения<br> для вашего бизнеса
 </h1>
-<a href="" class="button" >
+<a href="" class="button reset-link" >
     Заказать услугу
 </a>
 </section>
@@ -104,10 +104,10 @@
                 <img src="./images/teamcard1.jpg" alt="Николай Кучеренко">
             </div>
          <!-- Сделал div с помощью css можно будет легко задать стили, еще был вариант сделать список в списке.-->
-     <div>    
+     
          <h3 class="team-title reset">Николай Кучеренко</h3>
           <p class="team-text reset">Product Designer</p>
-</div>
+
 
 <ul class="team-icon reset-ul">
     <li>
@@ -266,7 +266,7 @@
 </div>
 
 <div class="social">
-<h4 class="box-title reset">присоединяйтесь</h4>
+<b class="social-title reset">присоединяйтесь</b>
 <ul class="social-list reset-ul">
      <li class="items"><a href="" class="reset-link"><img src="./images/insta.svg" alt="Инстаграм" width="44"></a></li>
     <li class="items"><a href="" class="reset-link"><img src="./images/twitter.svg" alt="Твитер" width="44"></a></li>
