--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     Эффективные решения<br> для вашего бизнеса
 </h1>
 
-<button type="button" class="button">Заказать услугу</button>
+<button type="button" class="button reset-button">Заказать услугу</button>
 </section>
 
     
