--- a/index.html
+++ b/index.html
@@ -51,28 +51,28 @@
         <ul class="feature-list reset-ul ">
           <li class="items">
 
-            <h3 class="feature-title">Внимание к деталям</h3>
+            <p class="feature-desc reset-p">Внимание к деталям</p>
 
-            <p> Идейные соображения, а также начало повседневной работы по формированию позиции.
+            <p class="reset-p"> Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
           <li class="items">
 
-            <h3 class="feature-title">Пунктуальность</h3>
-            <p>
+            <p class="feature-desc reset-p">Пунктуальность</p>
+            <p class="reset-p">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li class="items">
 
-            <h3 class="feature-title">Планирование</h3>
-            <p> Равным образом консультация с широким активом в значительной степени обуславливает.
+            <p class="feature-desc reset-p">Планирование</p>
+            <p class="reset-p"> Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li class="items">
 
-            <h3 class="feature-title">Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            <p class="feature-desc reset-p">Современные технологии</p>
+            <p class="reset-p">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
           </li>
         </ul>
