--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section class="feature">
       <div class="container-feature">
-        <h2 class="reset-h">Особенности</h2>
+        <h2 class="reset-h indent">Особенности</h2>
         <ul class="feature-list reset-ul ">
           <li class="items">
 
@@ -81,7 +81,7 @@
 
     <section class="box">
       <div class="container-box">
-        <h2 class="reset">Чем мы занимаемся</h2>
+        <h2 class="reset indent">Чем мы занимаемся</h2>
         <ul class="box-list reset-ul">
           <li class="items">
             <img src="./images/box-1.jpg" alt="Десктопные приложения" width="370" height="294">
@@ -98,7 +98,7 @@
 
     <section class="team">
       <div class="container">
-        <h2 class="reset">Наша команда</h2>
+        <h2 class="reset indent">Наша команда</h2>
         <ul class="team-list reset-ul">
           <li class="team-style">
             <div>
