--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
     </nav>
   </header>
 
-  <section>
+  <section class="portfolio">
     <div class="container">
 
       <!-- Придумал заголовок H1  -->
