--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section class="feature">
       <div class="container-feature">
-        <h2 class="reset-h indent">Особенности</h2>
+        <h2 class="reset-h indent visually-hidden">Особенности</h2>
         <ul class="feature-list reset-ul ">
           <li class="items">
 
