--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
     <div class="container">
 
       <!-- Придумал заголовок H1  -->
-      <h1 class="portfolio-title reset">Наши работы</h1>
+      <h1 class="portfolio-title reset visually-hidden">Наши работы</h1>
 
       <nav>
 
